--- a/huobitrade/src/main/res/layout/activity_main.xml
+++ b/huobitrade/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.icer.huobitrade.MainActivity">
+    tools:context="com.icer.huobitrade.ui.MainActivity">
 
     <TextView
         android:id="@+id/tv"
