--- a/huobitrade/src/main/res/values/colors.xml
+++ b/huobitrade/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="bg">#fef5f1</color>
+    <color name="bg_gray">#efefef</color>
+    <color name="color_11000000">#11000000</color>
 </resources>
