--- a/huobitrade/src/main/res/layout/activity_main.xml
+++ b/huobitrade/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
             android:layout_width="72dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
-            android:hint="涨至$"
+            android:hint="涨至"
             android:inputType="numberDecimal"
             android:maxLines="1"
             android:textSize="16sp"/>
@@ -36,7 +36,7 @@
             android:layout_width="72dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
-            android:hint="跌至$"
+            android:hint="跌至"
             android:inputType="numberDecimal"
             android:maxLines="1"
             android:textSize="16sp"/>
